<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="E_TransportTube" Id="{26e13819-1baa-4350-8f0d-08839603bdb0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
TYPE E_TransportTube :
(
	LS1 := 0,
	LS5 := 1,
	LS8 := 2,
	LD2 := 3,
	LD4 := 4,
	LD6 := 5,
	LD8 := 6,
	LD9 := 7,
	LD10 := 8,
	LD14 := 9
) UINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>